--- a/public/index.html
+++ b/public/index.html
@@ -1,84 +1,104 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sistema em Manutenção</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>🚂 Revezamento - Manutenção</title>
   <style>
     body {
-      background: linear-gradient(to right, #2c3e50, #34495e);
-      color: white;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: 'Segoe UI', sans-serif;
-      padding: 20px;
+      background: #1e1e1e;
+      color: #eee;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       text-align: center;
+      padding: 2rem;
+      overflow-x: hidden;
     }
-
-    .container {
-      background-color: rgba(0, 0, 0, 0.6);
-      border-radius: 15px;
-      padding: 40px 25px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
-      max-width: 500px;
-      width: 100%;
-    }
-
     h1 {
-      font-weight: 700;
-      margin-bottom: 20px;
-      animation: pulse 2s infinite;
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
     }
-
-    @keyframes pulse {
-      0% { color: #ffffff; }
-      50% { color: #f1c40f; }
-      100% { color: #ffffff; }
-    }
-
     p {
-      color: #ccc;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
+      margin-bottom: 3rem;
+      color: #bbb;
     }
 
-    .assinatura {
-      margin-top: 30px;
-      font-size: 0.95rem;
-      color: #aaa;
+    /* Relógio */
+    #clock {
+      font-size: 2rem;
+      font-weight: bold;
+      margin-bottom: 4rem;
+      font-family: monospace;
+      letter-spacing: 2px;
+    }
+
+    /* Trem container e animação */
+    #train-container {
+      position: relative;
+      width: 100vw;
+      height: 120px;
+      overflow: hidden;
+      margin: 0 auto;
+      max-width: 600px;
+    }
+    #train {
+      position: absolute;
+      left: -200px;
+      top: 10px;
+      width: 180px;
+      animation: moveTrain 8s linear infinite;
+    }
+
+    @keyframes moveTrain {
+      0% {
+        left: -200px;
+      }
+      100% {
+        left: 100vw;
+      }
+    }
+
+    /* Desenho simples do trem usando SVG */
+    svg {
+      width: 180px;
+      height: 100px;
+      fill: #ff4c00;
+      stroke: #222;
+      stroke-width: 3px;
+      filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.4));
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>🛠️ Sistema em Manutenção</h1>
-    <p>Estamos realizando testes e melhorias.<br>Por favor, volte em breve.</p>
+  <h1>🚂 Revezamento</h1>
+  <p>Olá Nayron, estamos em manutenção no momento. Volte em breve!</p>
 
-    <div class="assinatura">
-      <hr style="background-color: #888;">
-      <p><strong>Assinado, Jefferson Nayron</strong><br>🚂 Revezamento Turma B</p>
+  <div id="clock">--:--:--</div>
+
+  <div id="train-container">
+    <div id="train">
+      <svg viewBox="0 0 100 50" xmlns="http://www.w3.org/2000/svg" aria-label="Trem">
+        <rect x="10" y="20" width="60" height="20" rx="4" ry="4" />
+        <rect x="70" y="10" width="20" height="30" rx="3" ry="3" />
+        <circle cx="25" cy="45" r="7" fill="#222" />
+        <circle cx="65" cy="45" r="7" fill="#222" />
+        <circle cx="80" cy="45" r="7" fill="#222" />
+        <rect x="15" y="10" width="15" height="15" fill="#222" />
+        <rect x="35" y="10" width="20" height="10" fill="#222" />
+      </svg>
     </div>
   </div>
 
-  <!-- Bootstrap Script -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Animação dinâmica extra (mensagem alternando) -->
   <script>
-    const frases = [
-      "Sistema em Manutenção",
-      "Testes em andamento...",
-      "Volte em breve!",
-      "🛠️ Revezamento Turma B 🛠️"
-    ];
-
-    let index = 0;
-    setInterval(() => {
-      document.querySelector('h1').textContent = frases[index % frases.length];
-      index++;
-    }, 2500);
+    function atualizarRelogio() {
+      const agora = new Date();
+      const h = String(agora.getHours()).padStart(2, '0');
+      const m = String(agora.getMinutes()).padStart(2, '0');
+      const s = String(agora.getSeconds()).padStart(2, '0');
+      document.getElementById('clock').textContent = `${h}:${m}:${s}`;
+    }
+    atualizarRelogio();
+    setInterval(atualizarRelogio, 1000);
   </script>
 </body>
 </html>
