--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,193 @@
-<body>
-  <h1>🚂 Revezamento</h1>
-  <p>Olá, estamos em manutenção no momento. Volte em breve!</p>
-
-  <div id="clock">--:--:--</div>
-
-  <div id="train-container">
-    <div id="train">
-      <!-- seu SVG do trem -->
-    </div>
-  </div>
-
-  <button id="playBtn" style="margin-top: 20px;"></button>
-
-  <audio id="audio" loop>
-    <source src="musica.mp3" type="audio/mpeg" />
-  </audio>
-
-  <script>
-    function atualizarRelogio() {
-      const agora = new Date();
-      const h = String(agora.getHours()).padStart(2, '0');
-      const m = String(agora.getMinutes()).padStart(2, '0');
-      const s = String(agora.getSeconds()).padStart(2, '0');
-      document.getElementById('clock').textContent = `${h}:${m}:${s}`;
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Login - Revezamento Turma B</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <style>
+    body {
+      background: #e0f7fa;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      padding: 1rem;
+      margin: 0;
+      text-align: center;
     }
-    atualizarRelogio();
-    setInterval(atualizarRelogio, 1000);
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.3rem;
+    }
+    .trem {
+      font-size: 4.5rem;
+      animation: moverTrem 3s linear infinite;
+      margin-bottom: 1.5rem;
+      user-select: none;
+    }
+    @keyframes moverTrem {
+      0% { transform: translateX(-80px); }
+      50% { transform: translateX(40px); }
+      100% { transform: translateX(-80px); }
+    }
+    .btn-login {
+      width: 180px;
+      margin: 0.5rem auto;
+      font-size: 1rem;
+      padding: 0.5rem 0;
+      display: block;
+    }
+    #loginAdminForm {
+      max-width: 320px;
+      width: 100%;
+      background: #fff;
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 0 8px rgb(0 0 0 / 0.1);
+      display: none;
+      margin-top: 1rem;
+    }
+    #loginAdminForm label {
+      font-weight: 600;
+    }
+    #loginAdminForm input {
+      font-size: 1rem;
+    }
+    #loginError {
+      font-size: 0.9rem;
+    }
 
-    document.getElementById('playBtn').addEventListener('click', () => {
-      const audio = document.getElementById('audio');
-      audio.play();
-    });
-  </script>
+    /* Responsividade extra */
+    @media (max-width: 400px) {
+      h1 {
+        font-size: 2rem;
+      }
+      .trem {
+        font-size: 3.5rem;
+      }
+      .btn-login {
+        width: 140px;
+        font-size: 0.9rem;
+      }
+      #loginAdminForm {
+        max-width: 260px;
+        padding: 0.8rem;
+      }
+    }
+  </style>
+</head>
+<body>
+  <h1>🚂 Revezamento Turma B</h1>
+  <div class="trem">🚂🚃🚃</div>
+
+  <button id="btnAdm" class="btn btn-primary btn-login">Entrar como ADM</button>
+  <button id="btnUser" class="btn btn-success btn-login">Entrar Normal</button>
+  <button id="btnLogout" class="btn btn-danger btn-login" style="display:none;">Logout</button>
+
+  <form id="loginAdminForm" class="mt-3" autocomplete="off">
+    <div class="mb-3">
+      <label for="senha" class="form-label">Senha ADM</label>
+      <input type="password" id="senha" class="form-control" placeholder="Digite a senha" required />
+    </div>
+    <div id="loginError" class="text-danger mb-2" style="display:none;"></div>
+    <button type="submit" class="btn btn-primary w-100">Login</button>
+  </form>
+
+<script>
+  const btnAdm = document.getElementById('btnAdm');
+  const btnUser = document.getElementById('btnUser');
+  const btnLogout = document.getElementById('btnLogout');
+  const loginAdminForm = document.getElementById('loginAdminForm');
+  const loginError = document.getElementById('loginError');
+
+  async function checkAdmin() {
+    try {
+      const res = await fetch('/checkAdmin', { credentials: 'include' });
+      const data = await res.json();
+      if (data.isAdmin) {
+        btnAdm.style.display = 'none';
+        btnUser.style.display = 'none';
+        btnLogout.style.display = 'inline-block';
+        loginAdminForm.style.display = 'none';
+      } else {
+        btnAdm.style.display = 'inline-block';
+        btnUser.style.display = 'inline-block';
+        btnLogout.style.display = 'none';
+      }
+    } catch {
+      btnAdm.style.display = 'inline-block';
+      btnUser.style.display = 'inline-block';
+      btnLogout.style.display = 'none';
+    }
+  }
+
+  checkAdmin();
+
+  btnAdm.addEventListener('click', () => {
+    if (loginAdminForm.style.display === 'block') {
+      loginAdminForm.style.display = 'none';
+      loginError.style.display = 'none';
+    } else {
+      loginAdminForm.style.display = 'block';
+      loginError.style.display = 'none';
+      document.getElementById('senha').value = '';
+      document.getElementById('senha').focus();
+    }
+  });
+
+  btnUser.addEventListener('click', () => {
+    // Redireciona para app.html modo usuário normal
+    window.location.href = 'app.html';
+  });
+
+  loginAdminForm.addEventListener('submit', async e => {
+    e.preventDefault();
+    const senha = document.getElementById('senha').value.trim();
+
+    try {
+      // rota para /login (antes estava '/')
+      const res = await fetch('/login', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        credentials: 'include',
+        body: JSON.stringify({ senha })
+      });
+
+      if (!res.ok) {
+        const data = await res.json();
+        loginError.textContent = data.erro || 'Erro no login';
+        loginError.style.display = 'block';
+        document.getElementById('senha').focus();
+        return;
+      }
+
+      btnAdm.style.display = 'none';
+      btnUser.style.display = 'none';
+      btnLogout.style.display = 'inline-block';
+      loginAdminForm.style.display = 'none';
+      loginError.style.display = 'none';
+
+      // Redireciona com parâmetro adm=1
+      window.location.href = 'app.html?adm=1';
+
+    } catch (error) {
+      loginError.textContent = 'Erro de comunicação com o servidor';
+      loginError.style.display = 'block';
+      document.getElementById('senha').focus();
+    }
+  });
+
+  btnLogout.addEventListener('click', async () => {
+    try {
+      await fetch('/logout', { method: 'POST', credentials: 'include' });
+    } catch {
+      // ignore erros
+    }
+    location.reload();
+  });
+</script>
 </body>
+</html>
