--- a/public/index.html
+++ b/public/index.html
@@ -61,9 +61,9 @@
     }
 
     /* Responsividade extra */
-    @media (max-width: 400px) {
+    @media (max-width: 450px) {
       h1 {
-        font-size: 2rem;
+        font-size: 28px;
       }
       .trem {
         font-size: 3.5rem;
