--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,6 @@
     #loginError {
       font-size: 0.9rem;
     }
-
     /* Responsividade extra */
     @media (max-width: 450px) {
       h1 {
@@ -77,117 +76,62 @@
         padding: 0.8rem;
       }
     }
+
+    /* Estilo para manutenção */
+    .maintenance {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      font-size: 2rem;
+      font-weight: bold;
+    }
+    .hidden {
+      display: none;
+    }
   </style>
 </head>
 <body>
-  <h1>🚂 Revezamento Turma B</h1>
-  <div class="trem">🚂🚃🚃</div>
+  <!-- Tela de Manutenção -->
+  <div class="maintenance">
+    A página está em manutenção. Volte logo!
+  </div>
 
-  <button id="btnAdm" class="btn btn-primary btn-login">Entrar como ADM</button>
-  <button id="btnUser" class="btn btn-success btn-login">Entrar Normal</button>
-  <button id="btnLogout" class="btn btn-danger btn-login" style="display:none;">Logout</button>
+  <!-- Conteúdo Ocultado -->
+  <div class="hidden" id="content">
+    <h1>🚂 Revezamento Turma B</h1>
+    <div class="trem">🚂🚃🚃</div>
 
-  <form id="loginAdminForm" class="mt-3" autocomplete="off">
-    <div class="mb-3">
-      <label for="senha" class="form-label">Senha ADM</label>
-      <input type="password" id="senha" class="form-control" placeholder="Digite a senha" required />
-    </div>
-    <div id="loginError" class="text-danger mb-2" style="display:none;"></div>
-    <button type="submit" class="btn btn-primary w-100">Login</button>
-  </form>
+    <button id="btnAdm" class="btn btn-primary btn-login">Entrar como ADM</button>
+    <button id="btnUser" class="btn btn-success btn-login">Entrar Normal</button>
+    <button id="btnLogout" class="btn btn-danger btn-login" style="display:none;">Logout</button>
+
+    <form id="loginAdminForm" class="mt-3" autocomplete="off">
+      <div class="mb-3">
+        <label for="senha" class="form-label">Senha ADM</label>
+        <input type="password" id="senha" class="form-control" placeholder="Digite a senha" required />
+      </div>
+      <div id="loginError" class="text-danger mb-2" style="display:none;"></div>
+      <button type="submit" class="btn btn-primary w-100">Login</button>
+    </form>
+  </div>
 
 <script>
-  const btnAdm = document.getElementById('btnAdm');
-  const btnUser = document.getElementById('btnUser');
-  const btnLogout = document.getElementById('btnLogout');
-  const loginAdminForm = document.getElementById('loginAdminForm');
-  const loginError = document.getElementById('loginError');
+  // Aqui, se quiser adicionar funcionalidades dinâmicas enquanto a manutenção estiver ativa, pode ajustar o comportamento.
+  // Por exemplo, desabilitar botões ou outras interações.
 
-  async function checkAdmin() {
-    try {
-      const res = await fetch('/checkAdmin', { credentials: 'include' });
-      const data = await res.json();
-      if (data.isAdmin) {
-        btnAdm.style.display = 'none';
-        btnUser.style.display = 'none';
-        btnLogout.style.display = 'inline-block';
-        loginAdminForm.style.display = 'none';
-      } else {
-        btnAdm.style.display = 'inline-block';
-        btnUser.style.display = 'inline-block';
-        btnLogout.style.display = 'none';
-      }
-    } catch {
-      btnAdm.style.display = 'inline-block';
-      btnUser.style.display = 'inline-block';
-      btnLogout.style.display = 'none';
-    }
-  }
-
-  checkAdmin();
-
-  btnAdm.addEventListener('click', () => {
-    if (loginAdminForm.style.display === 'block') {
-      loginAdminForm.style.display = 'none';
-      loginError.style.display = 'none';
-    } else {
-      loginAdminForm.style.display = 'block';
-      loginError.style.display = 'none';
-      document.getElementById('senha').value = '';
-      document.getElementById('senha').focus();
-    }
-  });
-
-  btnUser.addEventListener('click', () => {
-    // Redireciona para app.html modo usuário normal
-    window.location.href = 'app.html';
-  });
-
-  loginAdminForm.addEventListener('submit', async e => {
-    e.preventDefault();
-    const senha = document.getElementById('senha').value.trim();
-
-    try {
-      // rota para /login (antes estava '/')
-      const res = await fetch('/login', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        credentials: 'include',
-        body: JSON.stringify({ senha })
-      });
-
-      if (!res.ok) {
-        const data = await res.json();
-        loginError.textContent = data.erro || 'Erro no login';
-        loginError.style.display = 'block';
-        document.getElementById('senha').focus();
-        return;
-      }
-
-      btnAdm.style.display = 'none';
-      btnUser.style.display = 'none';
-      btnLogout.style.display = 'inline-block';
-      loginAdminForm.style.display = 'none';
-      loginError.style.display = 'none';
-
-      // Redireciona com parâmetro adm=1
-      window.location.href = 'app.html?adm=1';
-
-    } catch (error) {
-      loginError.textContent = 'Erro de comunicação com o servidor';
-      loginError.style.display = 'block';
-      document.getElementById('senha').focus();
-    }
-  });
-
-  btnLogout.addEventListener('click', async () => {
-    try {
-      await fetch('/logout', { method: 'POST', credentials: 'include' });
-    } catch {
-      // ignore erros
-    }
-    location.reload();
-  });
+  // Por enquanto, todos os botões estão ocultos e a mensagem de manutenção está ativa.
+  // Para desabilitar a manutenção, basta esconder o div de manutenção e mostrar o conteúdo:
+  setTimeout(function() {
+    document.querySelector('.maintenance').style.display = 'none';
+    document.getElementById('content').style.display = 'block';
+  }, 5000); // Exibe após 5 segundos (pode ser ajustado conforme necessário)
 </script>
 </body>
 </html>
