--- a/public/app.html
+++ b/public/app.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>🚂 Revezamento Turma B</title>
+   <!-- Botão para acessar o Dashboard -->
+
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -35,11 +37,40 @@
       text-align: left;
       white-space: pre-wrap;
     }
+      /* Estilo do botão no canto superior esquerdo */
+#dashboardBtn {
+  position: fixed;
+  top: 4px;
+  left: 10px;
+  background-color: rgba(0, 123, 255, 0.1); /* Cor com transparência */
+  color: #007bff; /* Cor do texto */
+  border-radius: 25px;
+  padding: 3px 5px;
+  font-size: 1rem;
+  font-weight: bold;
+  z-index: 9999;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+#dashboardBtn:hover {
+  background-color: rgba(0, 123, 255, 0.3); /* Cor de fundo ao passar o mouse */
+  color: #ffffff; /* Cor do texto ao passar o mouse */
+}
+
+#dashboardBtn:focus {
+  outline: none;
+  box-shadow: none;
+}
   </style>
 </head>
 
 <body class="container py-4">
+<!-- Botão para acessar o Dashboard -->
+<a href="dashboard.html" class="btn btn-outline-primary btn-sm" id="dashboardBtn">+ Dashboard</a>
+
   <h1 class="fw-bold logo">🚂 Revezamento Turma B</h1>
+ 
+
   <p class="quantidade-equipes">Quantidade de equipes: <span id="contadorPessoas">0</span></p>
 
   <form id="formPessoa" class="mb-4">
