--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -8,20 +8,25 @@
   <style>
     body {
       font-family: 'Roboto', sans-serif;
-      background: #f5f5f5;
+      background: #f4f7fc;
       padding-top: 50px;
     }
 
     .dashboard-card {
       background: #ffffff;
       border-radius: 10px;
-      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
       padding: 30px;
       margin-bottom: 20px;
+      transition: transform 0.3s ease;
+    }
+
+    .dashboard-card:hover {
+      transform: translateY(-5px);
     }
 
     .status {
-      font-size: 1.5rem;
+      font-size: 1.3rem;
       font-weight: bold;
     }
 
@@ -37,6 +42,10 @@
       color: #ffeb3b;
     }
 
+    .progress-bar {
+      height: 20px;
+    }
+
     .table th, .table td {
       vertical-align: middle;
     }
@@ -46,13 +55,14 @@
     }
 
     .table-hover tbody tr:hover {
-      background-color: #f1f1f1;
+      background-color: #f9f9f9;
     }
 
     .header {
-      font-size: 1.8rem;
+      font-size: 2rem;
       font-weight: bold;
       margin-bottom: 20px;
+      color: #333;
     }
 
     .dashboard-header {
@@ -70,8 +80,41 @@
       color: #fff;
       border: none;
       text-decoration: none;
+      transition: background-color 0.3s ease;
     }
-  
+
+    .btn-back:hover {
+      background-color: #45a049;
+    }
+
+    .card-title {
+      font-size: 1.5rem;
+      margin-bottom: 15px;
+    }
+
+    .card-body {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    @media (max-width: 768px) {
+      .dashboard-card {
+        padding: 20px;
+      }
+
+      .status {
+        font-size: 1rem;
+      }
+
+      .btn-back {
+        font-size: 1rem;
+      }
+
+      .header {
+        font-size: 1.5rem;
+      }
+    }
   </style>
 </head>
 <body>
@@ -86,28 +129,46 @@
       <!-- Total de Pessoas -->
       <div class="col-md-4">
         <div class="dashboard-card">
-          <p class="status">Total de Pessoas: <span id="totalPessoas">0</span></p>
+          <p class="card-title">Total de Pessoas</p>
+          <div class="card-body">
+            <span class="status">Total: <span id="totalPessoas">0</span></span>
+            <div class="progress w-50">
+              <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
         </div>
       </div>
 
       <!-- Pendente -->
       <div class="col-md-4">
         <div class="dashboard-card">
-          <p class="status status-pendente">Pessoas Pendentes: <span id="pendente">0</span></p>
+          <p class="card-title">Pessoas Pendentes</p>
+          <div class="card-body">
+            <span class="status status-pendente">Pendente: <span id="pendente">0</span></span>
+            <div class="progress w-50">
+              <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
         </div>
       </div>
 
       <!-- Concluído -->
       <div class="col-md-4">
         <div class="dashboard-card">
-          <p class="status status-concluido">Pessoas Concluídas: <span id="concluido">0</span></p>
+          <p class="card-title">Pessoas Concluídas</p>
+          <div class="card-body">
+            <span class="status status-concluido">Concluído: <span id="concluido">0</span></span>
+            <div class="progress w-50">
+              <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
     <!-- Tabela de Pessoas por Status -->
     <div class="dashboard-card">
-      <h3>Pessoas Ordenadas por Status</h3>
+      <h3>Pessoas Ordenadas por hora</h3>
       <table class="table table-bordered table-hover">
         <thead>
           <tr>
@@ -137,6 +198,15 @@
           document.getElementById('totalPessoas').textContent = totalPessoas;
           document.getElementById('pendente').textContent = pendente;
           document.getElementById('concluido').textContent = concluido;
+
+          // Atualiza as barras de progresso
+          const totalProgress = (totalPessoas / totalPessoas) * 100;
+          const pendenteProgress = (pendente / totalPessoas) * 100;
+          const concluidoProgress = (concluido / totalPessoas) * 100;
+
+          document.querySelector('.progress-bar').style.width = `${totalProgress}%`;
+          document.querySelectorAll('.progress-bar')[1].style.width = `${pendenteProgress}%`;
+          document.querySelectorAll('.progress-bar')[2].style.width = `${concluidoProgress}%`;
 
           // Ordena as pessoas pela hora de conclusão (primeiro as concluídas)
           const pessoasOrdenadas = data.sort((a, b) => {
